# cqrs-es-playground

./: .gitignore  Cargo.toml
1.startup/: Cargo.toml
1.startup/src/: errors.rs  main.rs
1.startup/src/entities/: user.rs
1.startup/src/entities/user/: id.rs
2.generalize/: Cargo.toml
2.generalize/src/: handler.rs  main.rs  markers.rs
2.generalize/src/entities/: user.rs
3.separate-into-thread/: Cargo.toml
3.separate-into-thread/src/: lifecycle.rs  main.rs
3.separate-into-thread/src/entities/: user.rs
4.logic-enhancement/: Cargo.toml
4.logic-enhancement/src/: channel.rs  errors.rs  handler.rs  lifecycle.rs  main.rs
4.logic-enhancement/src/channel/: command.rs  event.rs  forget.rs
4.logic-enhancement/src/entities/: user.rs
4.logic-enhancement/src/entities/user/: id.rs  name.rs
5.impl-eventstore/: Cargo.toml
5.impl-eventstore/migrations/: 20250313085931_init.sql
5.impl-eventstore/src/: errors.rs  eventstore.rs  identifier.rs  main.rs  markers.rs  process.rs
5.impl-eventstore/src/entities/: user.rs
5.impl-eventstore/src/entities/user/: id.rs
5.impl-eventstore/src/eventstore/: adaptor.rs  io.rs  payload.rs  process.rs
5.impl-eventstore/src/eventstore/adaptor/: sqlite.rs
5.impl-eventstore/src/process/: channel.rs  context.rs  handler.rs  lifecycle.rs
5.impl-eventstore/src/process/channel/: command.rs  event.rs  forget.rs
